--- a/index.html
+++ b/index.html
@@ -61,22 +61,23 @@
         }
 
         img {
-            height: 80px;
+            height: 110px;
             border-radius: 15px;
         }
+        
     </style>
 </head>
 <body>
     <div class="container">
         <div class="block">
             <a href="https://example.com/chase" target="_blank">
-                <img src="images/Chase.jpg" alt="" class="logo">
+                <img src="images/Chase.png" alt="" class="logo">
                 <h3>Chase</h3>
             </a>
         </div>
         <div class="block">
             <a href="https://example.com/capitalone" target="_blank">
-                <img src="images/CapitalOneTransperent.png" alt="">
+                <img src="images/CapitalOne.png" alt="">
                 <h3>Capital One</h3>
             </a>
         </div>
@@ -88,7 +89,7 @@
         </div>
         <div class="block">
             <a href="https://example.com/citi" target="_blank">
-                <img src="images/CitiLogo.png" alt="">
+                <img src="images/CitiBank.png" alt="">
                 <h3>CitiBank</h3>
             </a>
         </div>
