Created a new article esk page RewardsAndCashBack.html that gives a description of the benifits of earning rewards and cashback. Connected the index page to the RewardsAndCashBack.html and BankHomePage.html

--- a/index.html
+++ b/index.html
@@ -70,13 +70,6 @@
         background: linear-gradient(135deg, #005fa3, #007bbf);
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
     }
-    footer {
-        text-align: center;
-        padding: 1.5rem;
-        background-color: #1e293b;
-        color: #e0e0e0; /* Soft white for better readability */
-        margin-top: 2rem;
-    }
     .nav-buttons {
         display: flex;
         justify-content: space-evenly;
@@ -107,12 +100,12 @@
         <div class="benefit">
             <h2>1. Convenience</h2>
             <p>Credit cards allow you to make purchases online, over the phone, and in-store without the need to carry cash. They are widely accepted across the globe.</p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/RewardsAndCashBack.html" class="cta-button">Learn More</a>
         </div>
         <div class="benefit">
             <h2>2. Rewards and Cashback</h2>
             <p>Many credit cards offer rewards programs, including points, miles, and cashback on purchases, helping you save money or earn perks over time.</p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/RewardsAndCashBack.html" class="cta-button">Learn More</a>
         </div>
         <div class="benefit">
             <h2>3. Build Credit History</h2>
@@ -126,7 +119,7 @@
         </div>
     </div>
     <div class="nav-buttons">
-        <a href="page1.html" class="cta-button">Find a Credit Card</a>
+        <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/BankHomePage.html" class="cta-button">Browse Credit Cards</a>
         <a href="page4.html" class="cta-button">Benifit Calculator</a>
     </div>
 </body>
