Created a new file Chase.html that lists the best credit cards that chase has. Linked BankHomePage.html to Chase.html

--- a/Chase.html
+++ b/Chase.html
@@ -70,33 +70,27 @@
 <body>
     <div class="container">
         <div class="block">
-            <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/Chase.html" target="_blank">
-                <img src="images/Chase.png" alt="" class="logo">
-                <h3>Chase</h3>
+            <a href="https://example.com/chase" target="_blank">
+                <img src="images/freedomFlex.png" alt="" class="logo">
+                <h3>Freedom Flex</h3>
             </a>
         </div>
         <div class="block">
             <a href="https://example.com/capitalone" target="_blank">
-                <img src="images/CapitalOne.png" alt="">
-                <h3>Capital One</h3>
+                <img src="images/freedomUnlimited.png" alt="">
+                <h3>Freedom Unlimited</h3>
             </a>
         </div>
         <div class="block">
             <a href="https://example.com/amex" target="_blank">
-                <img src="images/AmexLogo.png" alt="">
-                <h3>American Express</h3>
+                <img src="images/sapphirePreferred.png" alt="">
+                <h3>Sapphire Preferred</h3>
             </a>
         </div>
         <div class="block">
             <a href="https://example.com/citi" target="_blank">
-                <img src="images/CitiBank.png" alt="">
-                <h3>CitiBank</h3>
-            </a>
-        </div>
-        <div class="block">
-            <a href="https://example.com/wellsfargo" target="_blank">
-                <img src="images/WellsFargo.png" alt="">
-                <h3>Wells Fargo</h3>
+                <img src="images/sapphireReserved.png" alt="">
+                <h3>Sapphire Reserved</h3>
             </a>
         </div>
     </div>
