--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="benefit">
             <h2>1. Convenience</h2>
             <p>Credit cards allow you to make purchases online, over the phone, and in-store without the need to carry cash. They are widely accepted across the globe.</p>
-            <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/RewardsAndCashBack.html" class="cta-button">Learn More</a>
+            <a href="H" class="cta-button">Learn More</a>
         </div>
         <div class="benefit">
             <h2>2. Rewards and Cashback</h2>
