Created two new files, questionnaire.html and recommendation.html that help figure out recommendations for the user based on the answers given by the user.

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     <div class="nav-buttons">
         <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/BankHomePage.html" class="cta-button">Browse Credit Cards</a>
         <a href="page4.html" class="cta-button">Benifit Calculator</a>
+        <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/temp.html" class="cta-button">Card Recommender</a>
     </div>
 </body>
 </html>
