Made some changed to the index.html, recommendation.html to polish the design elements up and make the pages look better. Linked the two pages by adding a home button in the latter.

--- a/index.html
+++ b/index.html
@@ -53,9 +53,23 @@
     .benefit p {
         color: #b0bec5; /* Light gray for secondary text */
     }
-    .cta-button {
+    .cta-button1 {
         display: inline-block;
         margin-top: 1rem;
+        padding: 0.75rem 1.5rem;
+        font-size: 1rem;
+        color: white;
+        background: linear-gradient(135deg, #0074D9, #00a8ff);
+        border: none;
+        border-radius: 25px;
+        cursor: pointer;
+        text-decoration: none;
+        transition: background 0.3s ease, box-shadow 0.3s ease;
+    }
+    .cta-button2 {
+        display: inline-block;
+        margin-top: 1rem;
+        margin-bottom: 115px;
         padding: 0.75rem 1.5rem;
         font-size: 1rem;
         color: white;
@@ -100,28 +114,28 @@
         <div class="benefit">
             <h2>1. Convenience</h2>
             <p>Credit cards allow you to make purchases online, over the phone, and in-store without the need to carry cash. They are widely accepted across the globe.</p>
-            <a href="H" class="cta-button">Learn More</a>
+            <a href="H" class="cta-button1">Learn More</a>
         </div>
         <div class="benefit">
             <h2>2. Rewards and Cashback</h2>
             <p>Many credit cards offer rewards programs, including points, miles, and cashback on purchases, helping you save money or earn perks over time.</p>
-            <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/RewardsAndCashBack.html" class="cta-button">Learn More</a>
+            <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/RewardsAndCashBack.html" class="cta-button1">Learn More</a>
         </div>
         <div class="benefit">
             <h2>3. Build Credit History</h2>
             <p>Using a credit card responsibly by paying on time helps you build and improve your credit score, which is essential for future financial opportunities like loans and mortgages.</p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="#" class="cta-button1">Learn More</a>
         </div>
         <div class="benefit">
             <h2>4. Fraud Protection</h2>
             <p>Most credit cards come with fraud protection, ensuring that unauthorized transactions are not charged to you.</p>
-            <a href="#" class="cta-button">Learn More</a>
+            <a href="#" class="cta-button1">Learn More</a>
         </div>
     </div>
     <div class="nav-buttons">
-        <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/BankHomePage.html" class="cta-button">Browse Credit Cards</a>
-        <a href="page4.html" class="cta-button">Benifit Calculator</a>
-        <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/temp.html" class="cta-button">Card Recommender</a>
+        <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/BankHomePage.html" class="cta-button2">Browse Credit Cards</a>
+        <a href="page4.html" class="cta-button2">Benifit Calculator</a>
+        <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/questionnaire.html" class="cta-button2">Card Recommender</a>
     </div>
 </body>
 </html>
