--- a/recommendation.html
+++ b/recommendation.html
@@ -73,6 +73,24 @@
         .btn:hover {
             transform: scale(1.1);
         }
+        .cta-button {
+            display: inline-block;
+            margin-top: 20rem;
+            margin-bottom: 40px;
+            padding: 0.75rem 1.5rem;
+            font-size: 1rem;
+            color: white;
+            background: linear-gradient(135deg, #0074D9, #00a8ff);
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            text-decoration: none;
+            transition: background 0.3s ease, box-shadow 0.3s ease;
+        }
+        .cta-button:hover {
+            background: linear-gradient(135deg, #005fa3, #007bbf);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        }
     </style>
 </head>
 <body>
@@ -110,5 +128,6 @@
         document.getElementById('recommendations').innerText = recommendations;
         document.getElementById('card-icon').src = iconSrc;
     </script>
+    <a href="file:///Users/dev/Desktop/Webpages/creditCardWebsite/index.html" class="cta-button">Back to Home</a>
 </body>
 </html>
