Finished up and polished BankHomePage.html and created Amex.html taht connects to the former. Added several small tweeks and changed to refine the pages.

--- a/CapitalOne.html
+++ b/CapitalOne.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bank Selection</title>
+    <title>Capital One Cards</title>
     <style>
         body {
             margin: 0;
@@ -53,17 +53,16 @@
             color: #d1d5db;
         }
 
-        .block button {
-            all: unset;
+        .block a {
+            text-decoration: none;
+            color: inherit;
             display: block;
-            width: 100%;
             height: 100%;
-            cursor: pointer;
         }
 
         img {
             height: 110px;
-            border-radius: 15px;
+            border-radius: 5px;
         }
         
     </style>
@@ -71,34 +70,28 @@
 <body>
     <div class="container">
         <div class="block">
-            <button onclick="window.location.href='file:///Users/dev/Desktop/Webpages/creditCardWebsite/Chase.html';">
-                <img src="images/Chase.png" alt="" class="logo">
-                <h3>Chase</h3>
-            </button>
+            <a href="https://creditcards.chase.com/a1/freedom/CFDFlex1124?CELL=6D4C&jp_cmp=cc/Freedom+Flex_Brand_Exact_Freedom+Flex_SEM_US_NA_Standard_NA/sea/p56964750124/Chase+-+Freedom+Flex&gclsrc=aw.ds&gad_source=1&gclid=Cj0KCQiA4L67BhDUARIsADWrl7HxEEpiHsalXi1qYLLaF5LXEgFD04aHV35hE8NyK29UATOnsalI_rUaAtsdEALw_wcB&gclsrc=aw.ds" target="_blank">
+                <img src="images/freedomFlex.png" alt="" class="logo">
+                <h3>Freedom Flex</h3>
+            </a>
         </div>
         <div class="block">
-            <button onclick="window.location.href='https://example.com/capitalone';">
-                <img src="images/CapitalOne.png" alt="">
-                <h3>Capital One</h3>
-            </button>
+            <a href="https://creditcards.chase.com/a1/freedom/CFDUnl1124?CELL=6D4C&jp_cmp=cc/Freedom+Unlimited_Brand_Exact_Freedom_SEM_US_NA_Standard_NA/sea/p55734705554/Chase+Freedom+Unlimited&gclsrc=aw.ds&ds_rl=1247291&gad_source=1&gclid=Cj0KCQiA4L67BhDUARIsADWrl7HZk9IiwGL8Hgqdrp5HfhiZ6EYzBfABtLkxFJFzlPfOgp74oKbxNlwaArQEEALw_wcB&gclsrc=aw.ds" target="_blank">
+                <img src="images/freedomUnlimited.png" alt="">
+                <h3>Freedom Unlimited</h3>
+            </a>
         </div>
         <div class="block">
-            <button onclick="window.location.href='file:///Users/dev/Desktop/Webpages/creditCardWebsite/Amex.html';">
-                <img src="images/AmexLogo.png" alt="">
-                <h3>American Express</h3>
-            </button>
+            <a href="https://creditcards.chase.com/rewards-credit-cards/sapphire/preferred" target="_blank">
+                <img src="images/sapphirePreferred.png" alt="">
+                <h3>Sapphire Preferred</h3>
+            </a>
         </div>
         <div class="block">
-            <button onclick="window.location.href='https://example.com/citi';">
-                <img src="images/CitiBank.png" alt="">
-                <h3>CitiBank</h3>
-            </button>
-        </div>
-        <div class="block">
-            <button onclick="window.location.href='https://example.com/wellsfargo';">
-                <img src="images/WellsFargo.png" alt="">
-                <h3>Wells Fargo</h3>
-            </button>
+            <a href="https://creditcards.chase.com/rewards-credit-cards/sapphire/reserve" target="_blank">
+                <img src="images/sapphireReserved.png" alt="">
+                <h3>Sapphire Reserved</h3>
+            </a>
         </div>
     </div>
 </body>
