--- a/Chase.html
+++ b/Chase.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Blocks Page</title>
+    <title>Chase Cards</title>
     <style>
         body {
             margin: 0;
@@ -62,7 +62,7 @@
 
         img {
             height: 110px;
-            border-radius: 15px;
+            border-radius: 5px;
         }
         
     </style>
@@ -70,25 +70,25 @@
 <body>
     <div class="container">
         <div class="block">
-            <a href="https://example.com/chase" target="_blank">
+            <a href="https://creditcards.chase.com/a1/freedom/CFDFlex1124?CELL=6D4C&jp_cmp=cc/Freedom+Flex_Brand_Exact_Freedom+Flex_SEM_US_NA_Standard_NA/sea/p56964750124/Chase+-+Freedom+Flex&gclsrc=aw.ds&gad_source=1&gclid=Cj0KCQiA4L67BhDUARIsADWrl7HxEEpiHsalXi1qYLLaF5LXEgFD04aHV35hE8NyK29UATOnsalI_rUaAtsdEALw_wcB&gclsrc=aw.ds" target="_blank">
                 <img src="images/freedomFlex.png" alt="" class="logo">
                 <h3>Freedom Flex</h3>
             </a>
         </div>
         <div class="block">
-            <a href="https://example.com/capitalone" target="_blank">
+            <a href="https://creditcards.chase.com/a1/freedom/CFDUnl1124?CELL=6D4C&jp_cmp=cc/Freedom+Unlimited_Brand_Exact_Freedom_SEM_US_NA_Standard_NA/sea/p55734705554/Chase+Freedom+Unlimited&gclsrc=aw.ds&ds_rl=1247291&gad_source=1&gclid=Cj0KCQiA4L67BhDUARIsADWrl7HZk9IiwGL8Hgqdrp5HfhiZ6EYzBfABtLkxFJFzlPfOgp74oKbxNlwaArQEEALw_wcB&gclsrc=aw.ds" target="_blank">
                 <img src="images/freedomUnlimited.png" alt="">
                 <h3>Freedom Unlimited</h3>
             </a>
         </div>
         <div class="block">
-            <a href="https://example.com/amex" target="_blank">
+            <a href="https://creditcards.chase.com/rewards-credit-cards/sapphire/preferred" target="_blank">
                 <img src="images/sapphirePreferred.png" alt="">
                 <h3>Sapphire Preferred</h3>
             </a>
         </div>
         <div class="block">
-            <a href="https://example.com/citi" target="_blank">
+            <a href="https://creditcards.chase.com/rewards-credit-cards/sapphire/reserve" target="_blank">
                 <img src="images/sapphireReserved.png" alt="">
                 <h3>Sapphire Reserved</h3>
             </a>
