Finished up the BankHomePage.html and all pages that extend from it. Added WellsFargo.html and CitiBank.html.

--- a/BankHomePage.html
+++ b/BankHomePage.html
@@ -77,7 +77,7 @@
             </button>
         </div>
         <div class="block">
-            <button onclick="window.location.href='https://example.com/capitalone';">
+            <button onclick="window.location.href='http://127.0.0.1:5500/creditCardWebsite/CapitalOne.html';">
                 <img src="images/CapitalOne.png" alt="">
                 <h3>Capital One</h3>
             </button>
@@ -89,13 +89,13 @@
             </button>
         </div>
         <div class="block">
-            <button onclick="window.location.href='https://example.com/citi';">
+            <button onclick="window.location.href='http://127.0.0.1:5500/creditCardWebsite/CitiBank.html';">
                 <img src="images/CitiBank.png" alt="">
                 <h3>CitiBank</h3>
             </button>
         </div>
         <div class="block">
-            <button onclick="window.location.href='https://example.com/wellsfargo';">
+            <button onclick="window.location.href='http://127.0.0.1:5500/creditCardWebsite/WellsFargo.html';">
                 <img src="images/WellsFargo.png" alt="">
                 <h3>Wells Fargo</h3>
             </button>
