--- a/CitiBank.html
+++ b/CitiBank.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Capital One Cards</title>
+    <title>Citi Bank Credit Cards</title>
     <style>
         body {
             margin: 0;
@@ -70,27 +70,27 @@
 <body>
     <div class="container">
         <div class="block">
-            <a href="https://www.capitalone.com/credit-cards/quicksilverone/" target="_blank">
-                <img src="images/QuickSliverOne.avif" alt="" class="logo">
-                <h3>Quick Silver One</h3>
+            <a href="https://www.citi.com/usc/LPACA/Citi/Cards/DoubleCash/ps_A/index.html?cmp=knc|acquire|2006|CARDS|Google|BR&targetid=kwd-99517655125&gclid=Cj0KCQiA4L67BhDUARIsADWrl7Gfzv4rYCSfGeZ8VpMLH2LWVofxU_u-6awQMvD5lLPROZFdIuikRrIaAsFlEALw_wcB&gclsrc=aw.ds&ProspectID=PpsWoQWfmXMnjLONHwlXPrfAFhwdAiF6" target="_blank">
+                <img src="images/DoubleCash.png" alt="" class="logo">
+                <h3>Double Cash</h3>
             </a>
         </div>
         <div class="block">
-            <a href="https://www.capitalone.com/credit-cards/savor-good-credit/" target="_blank">
-                <img src="images/Savor.avif" alt="">
-                <h3>Savour</h3>
+            <a href="https://www.citi.com/credit-cards/citi-custom-cash-credit-card?cmp=knc_acquire_2411_GGL_BR_CustomCash_PDP&app=unsol&HKOP=9e9fe575553abce8259e0de824d459d0e8773303eced1d50a14cb2a1943698fc&gclid=Cj0KCQiA4L67BhDUARIsADWrl7H4ntHZIxZ1thbFewPA_LBPhTeQ6B6Q5dkzp7R9I9K0sSJjkUMfHTAaAgeFEALw_wcB&gclsrc=aw.ds" target="_blank">
+                <img src="images/CustomCash.png" alt="">
+                <h3>Custom Cash</h3>
             </a>
         </div>
         <div class="block">
-            <a href="https://www.capitalone.com/credit-cards/venture/" target="_blank">
-                <img src="images/Venture.avif" alt="">
-                <h3>Vanture</h3>
+            <a href="https://citicards.citi.com/usc/LPACA/Citi/Cards/DiamondPreferred/ps_A/default.htm?cmp=knc|acquire|2006|CARDS|Google|BR&targetid=kwd-535397782&gclid=Cj0KCQiA4L67BhDUARIsADWrl7EjBy2Peiyf7Mhgb2pGdzK_vmhnn_CD0IODhiAfL6mS2Qc2Jj0HNBMaAoZZEALw_wcB&gclsrc=aw.ds&BT_TX=1&ProspectID=A9A7A8E527A74F20AD947EA4102D0E61" target="_blank">
+                <img src="images/DiamondPreferred.png" alt="">
+                <h3>Diamond Preferred</h3>
             </a>
         </div>
         <div class="block">
-            <a href="https://www.capitalone.com/credit-cards/venture-x/" target="_blank">
-                <img src="images/Venture X.avif" alt="">
-                <h3>Venture X</h3>
+            <a href="https://www.citi.com/usc/lpaca/citi/rewards/stratapremier/ps/index.html?cmp=knc_acquire_2405_Google_Strata-Premier_BR&gclid=Cj0KCQiA4L67BhDUARIsADWrl7FIjzTJB3J-k2oBdj1JUsVhO85Hvm9EzygmixFCktZ3-Ac84aVnC90aApVUEALw_wcB&gclsrc=aw.ds&ProspectID=P37nQFyJMNFhNQlaqJk0wxG5U5qQdXzj" target="_blank">
+                <img src="images/StrataPremier.png" alt="">
+                <h3>Starta Premier</h3>
             </a>
         </div>
     </div>
