--- a/Amex.html
+++ b/Amex.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Premium Blocks Page</title>
+    <title>American Express Credit Cards</title>
     <style>
         body {
             margin: 0;
